Fix styling issues and add scrollbar customization

--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -6,5 +6,10 @@
     .sonnes {
         @apply bg-red-600 text-white;
     }
-   
+ 
+/* width */
+::-webkit-scrollbar {
+    width: 0px;
+  }
+  
 }
